--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rescue": "1.1.30",
