--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
-    "express-async-errors": "^3.1.1",
+    "express-async-errors": "3.1.1",
     "express-rescue": "1.1.30",
+    "express-validator": "7.0.1",
     "mysql2": "2.3.3"
   },
   "devDependencies": {
